--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "metro": "^0.54.0",
     "rxjs": "~6.3.3",
+    "tar": "^4.4.8",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
